--- a/styles/main.less
+++ b/styles/main.less
@@ -35,21 +35,22 @@ a:not(.slider-control),
 }
 
 .burger-menu {
+	position: fixed;
+	z-index: 3;
+	top: 1.2em;
+	right: 1em;
+	width: 30px;
+	height: 15px;
 	margin: 0;
 	padding: .5em;
 	cursor: pointer;
-	position: fixed;
-	right: 1em;
-	top: 1.2em;
-	width: 30px;
-	height: 15px;
 
-	> div {
+	 > div {
+		position: absolute;
 		width: 30px;
 		height: 3px;
-		background: #000;
-		position: absolute;
 		transition: margin .3s, transform .3s;
+		background: #000;
 
 		&:nth-child(2) {
 			margin-top: 6px;
@@ -60,46 +61,51 @@ a:not(.slider-control),
 		}
 	}
 
-	&:hover >  div {
-		background: #00ffff;
+	&:hover > div {
+		background: #0ff;
 	}
 
 	&:before {
-		background: #000;
-		z-index: -1
+		z-index: -1;
+		background: #000;;
 	}
+}
+
+#overlay-menu {
+	position: fixed;
+	z-index: 2;
+	top: 0;
+	left: 0%;
+	width: 100vw;
+	height: 100vh;
+	background: #0ff;
+	transition: transform .35s;
+    transform: translateX(-100%);
 }
 
 .shadow {
 	position: absolute;
 	top: 0;
 	left: 0;
+	display: none;
 	width: 100vw;
 	height: 100vh;
-	background: #000;
-	opacity: 0;
 	transition: opacity .5s ease;
-	display: none;
+	opacity: 0;
+	background: #000;
 }
 
 #main-slider {
-	height: 100vh;
-	background: #000;
-	top: 0;
 	position: fixed;
 	z-index: -1;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background: #000;
 
 	#slider {
-		position: relative;
-		display: flex;
-		overflow-x: hidden;
-
 		#slider-container {
-			display: flex;
-			justify-content: center;
 			overflow: hidden;
-			margin: 0 auto;
-			text-align: center;
 
 			.hexaflip-cube.hexaflip-cube-slide {
 				transition: opacity .5s ease,transform 1s ease,-webkit-transform 1s ease;
@@ -207,15 +213,11 @@ a:not(.slider-control),
 	}
 }
 
-.hexaflip-side:nth-child(5),
-.hexaflip-side:nth-child(6) {
-	background-color: transparent !important;
-}
 
 #content {
 	margin-top: 100vh;
 
-	> section {
+	 > section {
 		max-width: 100vw;
 		height: 100vh;
 	}
@@ -227,4 +229,13 @@ a:not(.slider-control),
 
 #slide2 {
 	background: green;
+}
+
+.hexaflip-side {
+	background: linear-gradient(135deg, #0ff, yellow) !important;
+}
+
+.hexaflip-side:nth-child(5),
+.hexaflip-side:nth-child(6) {
+	background: transparent !important;
 }
