--- a/styles/main.less
+++ b/styles/main.less
@@ -1,7 +1,31 @@
+@font-face {
+	font-family: MyriadProRegular;
+	src: url(../fonts/MyriadProRegular.eot) format("embedded-opentype"),
+		url(../fonts/MyriadProRegular.woff) format("woff"),
+		url(../fonts/MyriadProRegular.ttf) format("truetype");
+	font-style: normal;
+	font-weight: 400;
+}
+
+@font-face {
+	font-family: MyriadProSemiBold;
+	src: url(../fonts/MyriadProSemiBold.eot) format("embedded-opentype"),
+		url(../fonts/MyriadProSemiBold.woff) format("woff"),
+		url(../fonts/MyriadProSemiBold.ttf) format("truetype");
+	font-style: normal;
+	font-weight: 400;
+}
+
 body {
 	overflow-x: hidden;
 	max-width: 100vw;
 	margin: 0;
+	font-family: MyriadProRegular;
+}
+
+.arrow-size {
+	width: 30px;
+	height: 30px;
 }
 
 a:not(.slider-control),
@@ -32,6 +56,42 @@ a:not(.slider-control),
 		right: 0;
 		transform: rotate(0);
 	}
+
+	> * {
+		position: inherit;
+	}
+}
+
+.logo {
+	position: sticky !important;
+	left: 10%;
+	text-transform: uppercase;
+	top: 0;
+	color: #000 !important;
+	z-index: 1;
+
+	&:before {
+		background: #000 !important;
+	}
+
+	&:hover > * {
+		color: #0ff;
+	}
+
+	h2 {
+		font-family: MyriadProSemiBold;
+		font-size: 30px;
+		margin: 0;
+		display: flex;
+		justify-content: space-between;
+		text-align: center;
+		line-height: 30px;
+	}
+
+	div {
+		font-size: 10px;
+		text-align: justify;
+	}
 }
 
 .burger-menu {
@@ -45,12 +105,13 @@ a:not(.slider-control),
 	padding: .5em;
 	cursor: pointer;
 
-	 > div {
+	> span {
 		position: absolute;
 		width: 30px;
 		height: 3px;
 		transition: margin .3s, transform .3s;
 		background: #000;
+		display: block;
 
 		&:nth-child(2) {
 			margin-top: 6px;
@@ -61,13 +122,27 @@ a:not(.slider-control),
 		}
 	}
 
-	&:hover > div {
+	&.yellow {
+		> span {
+			background: #000;
+		}
+
+		&:before {
+			background: #e8fa13;
+		}
+
+		&:hover > span {
+			background: #000;
+		}
+	}
+
+	&:hover > span {
 		background: #0ff;
 	}
 
 	&:before {
 		z-index: -1;
-		background: #000;;
+		background: #000;
 	}
 }
 
@@ -81,6 +156,39 @@ a:not(.slider-control),
 	background: #0ff;
 	transition: transform .35s;
     transform: translateX(-100%);
+}
+
+#top-menu {
+	position: fixed;
+	top: 0;
+	height: ~'calc(1em + 42px)';
+	background: #000;
+	width: 100%;
+	transition: .35s;
+	transform: translateY(-100%);
+	display: flex;
+	justify-content: center;
+
+	a {
+		margin: 0;
+		padding: 3px;
+		margin-top: 3px;
+
+		&:after {
+			content: '';
+			background: url(../svg/arrow-chevron--aqua.svg);
+			background-size: 100%;
+			transform: rotate(90deg);
+			width: ~'calc(100% - 6px)';
+			height: ~'calc(100% - 6px)';
+			position: absolute;
+		}
+
+		&:hover:after {
+			background: url(../svg/arrow-chevron--black.svg);
+			background-size: 100%;
+		}
+	}
 }
 
 .shadow {
@@ -131,8 +239,6 @@ a:not(.slider-control),
 	img {
 		position: absolute;
 		z-index: 1;
-		width: 30px;
-		height: 30px;
 		transition: all .3s ease;
 	}
 
@@ -238,4 +344,28 @@ a:not(.slider-control),
 .hexaflip-side:nth-child(5),
 .hexaflip-side:nth-child(6) {
 	background: transparent !important;
+}
+
+&.aqua {
+	> h2,
+	> div {
+		color: #0ff;
+	}
+
+	> span {
+		background: #0ff;
+	}
+
+	&:before {
+		background: #0ff !important;
+	}
+
+	&:hover > h2,
+	&:hover > div {
+		color: #000;
+	}
+
+	&:hover > span {
+		background: #000;
+	}
 }
