--- a/styles/main.less
+++ b/styles/main.less
@@ -16,6 +16,17 @@
 	font-weight: 400;
 }
 
+@-webkit-keyframes arrowAnimation {
+	0% { bottom: 20px }
+	60% { bottom: 40px }
+	to { bottom: 20px }
+}
+@keyframes arrowAnimation {
+	0% { bottom: 20px }
+	60% { bottom: 40px }
+	to { bottom: 20px }
+}
+
 body {
 	overflow-x: hidden;
 	max-width: 100vw;
@@ -28,6 +39,11 @@ body {
 	height: 30px;
 }
 
+a,
+a:hover {
+	text-decoration: none
+}
+
 a:not(.slider-control),
 .link {
 	font-size: .75em;
@@ -36,7 +52,6 @@ a:not(.slider-control),
 	overflow: hidden;
 	margin-left: -.5em;
 	padding: .5em;
-	text-decoration: none;
 	color: #333;
 
 	&:before {
@@ -50,6 +65,10 @@ a:not(.slider-control),
 		transform: rotate(45deg);
 		transform-origin: 100% 0;
 		background: #e8fa13;
+	}
+
+	&:hover {
+		text-decoration: none;
 	}
 
 	&:hover:before {
@@ -191,7 +210,6 @@ a:not(.slider-control),
 
 #main-slider {
 	position: fixed;
-	z-index: -1;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -233,7 +251,6 @@ a:not(.slider-control),
 		display: flex;
 		align-self: center;
 		flex-direction: column;
-		padding: 0 .5em 0 2em;
 		transition: opacity .3s ease 0s;
 	}
 
@@ -248,7 +265,7 @@ a:not(.slider-control),
 		border-style: solid;
 	}
 
-	&:hover {
+	&.hover {
 		transform: translate(0);
 
 		&:after {
@@ -267,7 +284,7 @@ a:not(.slider-control),
 	}
 
 	span {
-		padding-right: 45px;
+		padding: 0 45px 0 15px;
 	}
 
 	&:after {
@@ -276,7 +293,7 @@ a:not(.slider-control),
 		border-color: transparent transparent transparent #000;
 	}
 
-	&:hover > img {
+	&.hover > img {
 		margin-left: ~'calc(100% - 40px)';
 	}
 }
@@ -292,7 +309,7 @@ a:not(.slider-control),
 	}
 
 	span {
-		padding-left: 45px;
+		padding: 0 15px 0 45px;
 	}
 
 	&:after {
@@ -301,7 +318,7 @@ a:not(.slider-control),
 		border-color: transparent #000 transparent transparent;
 	}
 
-	&:hover > img {
+	&.hover > img {
 		margin-left: 10px;
 	}
 }
@@ -322,7 +339,7 @@ a:not(.slider-control),
 }
 
 #slide2 {
-	background: green;
+	background: aqua;
 }
 
 .hexaflip-side {
@@ -370,4 +387,31 @@ a:not(.slider-control),
 	&:hover > span {
 		background: #000;
 	}
+}
+
+#scrollPage {
+	position: absolute;
+	width: 60px;
+	height: 60px;
+	top: ~'calc(100% - 60px)';
+	padding: 0;
+	animation: 3s ease-in-out 0s normal none infinite running arrowAnimation;
+
+	&:after {
+		content: '';
+		background: url(../svg/arrow-chevron--yellow.svg);
+		background-size: 100%;
+		transform: rotate(-90deg);
+		width: 100%;
+		height: 100%;
+		position: absolute;
+	}
+
+	&:before {
+		display: none;
+	}
+}
+
+.content {
+	position: relative;
 }
