--- a/styles/main.less
+++ b/styles/main.less
@@ -16,17 +16,6 @@
 	font-weight: 400;
 }
 
-@-webkit-keyframes arrowAnimation {
-	0% { bottom: 20px }
-	60% { bottom: 40px }
-	to { bottom: 20px }
-}
-@keyframes arrowAnimation {
-	0% { bottom: 20px }
-	60% { bottom: 40px }
-	to { bottom: 20px }
-}
-
 body {
 	overflow-x: hidden;
 	max-width: 100vw;
@@ -328,18 +317,58 @@ a:not(.slider-control),
 	margin-top: 100vh;
 	box-shadow: 0 0 50px 0 rgba(0,0,0,.5);
 
-	 > section {
+	 > section > div {
 		max-width: 100vw;
 		height: ~'calc(100vh - 58px)';
 	}
 }
 
+#name_1,
+#name_2,
+#name_3 {
+	display: none;
+
+	&.visible {
+		display: block;
+	}
+}
+
 #slide1 {
-	background: yellow;
+	div {
+		background: red;
+	}
+
+	div:nth-child(2) {
+		background: green;
+	}
+
+	div:nth-child(3) {
+		background: blue;
+	}
 }
 
 #slide2 {
-	background: aqua;
+	div:nth-child(1) {
+		background: aqua;
+	}
+
+	div:nth-child(2) {
+		background: yellow;
+	}
+}
+
+#slide3 {
+	div:nth-child(1) {
+		background: linear-gradient(135deg, #0ff, yellow) !important;
+	}
+
+	div:nth-child(2) {
+		background: linear-gradient(135deg, #0ff, yellow) !important;
+	}
+
+	div:nth-child(3) {
+		background: linear-gradient(135deg, #0ff, yellow) !important;
+	}
 }
 
 .hexaflip-side {
@@ -393,9 +422,14 @@ a:not(.slider-control),
 	position: absolute;
 	width: 60px;
 	height: 60px;
-	top: ~'calc(100% - 60px)';
+	bottom: 30px;
 	padding: 0;
-	animation: 3s ease-in-out 0s normal none infinite running arrowAnimation;
+	left: ~'calc(50vw - 30px)';
+	animation-duration: 1s;
+	animation-name: updown;
+	animation-iteration-count: infinite;
+	animation-direction: alternate-reverse;
+	animation-timing-function: ease-in-out;
 
 	&:after {
 		content: '';
@@ -409,6 +443,16 @@ a:not(.slider-control),
 
 	&:before {
 		display: none;
+	}
+}
+
+@keyframes updown {
+	from {
+		bottom: 60px;
+	}
+
+	to {
+		bottom: 30px;
 	}
 }
 
