--- a/styles/main.less
+++ b/styles/main.less
@@ -333,8 +333,8 @@ a:not(.slider-control),
 	}
 }
 
-#slide1 {
-	div {
+#name_1 {
+	div:nth-child(1) {
 		background: red;
 	}
 
@@ -347,7 +347,7 @@ a:not(.slider-control),
 	}
 }
 
-#slide2 {
+#name_2 {
 	div:nth-child(1) {
 		background: aqua;
 	}
@@ -357,17 +357,17 @@ a:not(.slider-control),
 	}
 }
 
-#slide3 {
+#name_3 {
 	div:nth-child(1) {
-		background: linear-gradient(135deg, #0ff, yellow) !important;
+		background: linear-gradient(135deg, #0ff, yellow);
 	}
 
 	div:nth-child(2) {
-		background: linear-gradient(135deg, #0ff, yellow) !important;
+		background: linear-gradient(135deg, #0ff, yellow);
 	}
 
 	div:nth-child(3) {
-		background: linear-gradient(135deg, #0ff, yellow) !important;
+		background: linear-gradient(135deg, #0ff, yellow);
 	}
 }
 
