--- a/styles/main.less
+++ b/styles/main.less
@@ -76,7 +76,7 @@ a:not(.slider-control),
 	text-transform: uppercase;
 	top: 0;
 	color: #000 !important;
-	z-index: 1;
+	z-index: 2;
 
 	&:before {
 		background: #000 !important;
@@ -162,6 +162,7 @@ a:not(.slider-control),
 	transform: translateY(-100%);
 	display: flex;
 	justify-content: center;
+	z-index: 1;
 
 	a {
 		margin: 0;
@@ -211,6 +212,37 @@ a:not(.slider-control),
 			.hexaflip-cube.hexaflip-cube-slide {
 				transition: opacity .5s ease,transform 1s ease,-webkit-transform 1s ease;
 				transform: scale(1);
+
+				.slide-picture {
+					background-blend-mode: luminosity;
+					width: 100%;
+					height: 100%;
+					background-size: cover !important;
+					position: absolute;
+					left: 0;
+					top: 0;
+					background-position: center !important;
+
+					.slider-content {
+						position: relative;
+						height: 100%;
+						width: 50%;
+						overflow: hidden;
+						clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
+
+						.slider-content--background {
+							position: absolute;
+							width: ~'calc(100vw - 17px)'; //компнсируется ширина прокрутки, на разных системах может быть разной, 17px - самый популярный вариант
+							height: 100vh;
+							background-size: cover !important;
+							background-blend-mode: luminosity;
+							background-position: center !important;
+							-webkit-mask-image: -webkit-linear-gradient(0deg, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0));
+							mask-image: linear-gradient(0deg, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0));
+							background: linear-gradient(135deg,#0ff 30%,#ff0 100%);
+						}
+					}
+				}
 			}
 		}
 	}
@@ -335,7 +367,9 @@ a:not(.slider-control),
 
 #name_1 {
 	div:nth-child(1) {
-		background: red;
+		overflow: hidden;
+		position: relative;
+		background: linear-gradient(135deg, #0ff 25%, yellow);
 	}
 
 	div:nth-child(2) {
@@ -359,20 +393,20 @@ a:not(.slider-control),
 
 #name_3 {
 	div:nth-child(1) {
-		background: linear-gradient(135deg, #0ff, yellow);
+		background: linear-gradient(135deg, #0ff 25%, yellow);
 	}
 
 	div:nth-child(2) {
-		background: linear-gradient(135deg, #0ff, yellow);
+		background: linear-gradient(135deg, #0ff 25%, yellow);
 	}
 
 	div:nth-child(3) {
-		background: linear-gradient(135deg, #0ff, yellow);
+		background: linear-gradient(135deg, #0ff 25%, yellow);
 	}
 }
 
 .hexaflip-side {
-	background: linear-gradient(135deg, #0ff, yellow) !important;
+	background: linear-gradient(135deg, #0ff 25%, yellow) !important;
 }
 
 .hexaflip-side:nth-child(5),
